# wazo_chatd/plugins/presences/api.yml
@@ -122,12 +122,6 @@ definitions:
           - ringing
           - talking
           - unavailable
-      sessions:
-        type: array
-        description: '**Deprecated** Please use `connected`'
-        readOnly: true
-        items:
-          $ref: '#/definitions/Session'
       lines:
         type: array
         readOnly: true
@@ -149,16 +143,6 @@ definitions:
         description: If the user has active connections.
     required:
       - state
-
-  Session:
-    properties:
-      uuid:
-        type: string
-        readOnly: True
-      mobile:
-        type: boolean
-        description: Indicate if it is a mobile session or not
-        readOnly: True
 
   Line:
     properties:
